// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container components should take a snapshot with children 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
    data-testid="container-id"
  >
    <p>
      Children
    </p>
  </div>
</div>
`;

exports[`Container components should take a snapshot without children 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
    data-testid="container-id"
  />
</div>
`;
